???? 0.8.10

    user visible changes, admin:
    * More concise messages for create-links and up2s3

5/3/2014 0.8.9 Shai Shasag <shai@waves.com>

    user visible changes, client:
    * create-folders, unwtar and check-checksum are now done as internal instl commands instead of relying on external utilities.
    * During unwtar if .wtar.aa file is joined, .wtar.done file is removed.
    * New command create-folders will create folders for sync according to the to_sync_info_map.txt.
    * New command check-checksum will check checksums according to the to_sync_info_map.txt.
    * InstlMisc commands report execution time.
    * Windows: robocopy copy_dir_to_dir has /PURGE parameter so that redundant files in the target will be removed.
    * Mac: rsync copy_dir_to_dir has --delete parameter so that redundant files in the target will be removed.

    user visible changes, admin:
    * Creation of .txt files for all files in instl directory was moved from up2s3 command to create-links command.
    * up2s3 will upload up to the latest repo revision and not up to BASE_REPO_REV.
    * Options --start-progress and --total-progress become optional (for commands that accept them). Not supplying means there will be no progress report.
    * InstlMisc commands can report progress, some do it with staccato.

    programmer visible changes:
    * platformHelper renamed platform_helper everywhere.
    * New method InstlAdmin.get_last_repo_rev.
    * init_from_cmd_line_options can now assign defaults to options that were not specifed on the command line.
    * InstlMisc commands can now report progress by using --start-progress and --total-progress command line options.
    * PlatformSpecificHelperBase.check_checksum renamed check_checksum_for_file.
    * New method PlatformSpecificHelperBase.check_checksum_for_folder
    * PlatformSpecificHelperBase.unwtar renamed unwtar_file.
    * Method PlatformSpecificHelperBase.unwtar_current_folder, with added exit_if_error for windows.
