@@ -118,10 +118,6 @@ class PlatformSpecificHelperBase(object):
         self.num_items_for_progress_report = 0
         self.progress_staccato_period = int(var_list.get_str("PROGRESS_STACCATO_PERIOD"))
         self.progress_staccato_count = 0
-        copy_tool_name = self.DefaultCopyToolName(var_list.get_str("__CURRENT_OS__")) # copy instructions are always produced for the current os
-        if "COPY_TOOL" in var_list:
-            copy_tool_name = var_list.get_str("COPY_TOOL")
-        self.use_copy_tool(copy_tool_name)
 
     def DefaultCopyToolName(self, target_os):
         retVal = None
@@ -140,6 +136,12 @@ class PlatformSpecificHelperBase(object):
         """ platform specific initialization of the download tool object.
             Can be done only after the definitions for index have been read."""
         pass
+
+    def init_copy_tool(self):
+        copy_tool_name = self.DefaultCopyToolName(var_list.get_str("__CURRENT_OS__")) # copy instructions are always produced for the current os
+        if "COPY_TOOL" in var_list:
+            copy_tool_name = var_list.get_str("COPY_TOOL")
+        self.use_copy_tool(copy_tool_name)
 
     @abc.abstractmethod
     def get_install_instructions_prefix(self):
